Update finnish translations

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-08 08:10+0000\n"
+"POT-Creation-Date: 2021-06-10 11:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,11 +18,59 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "M1"
+msgstr "M1"
+
+msgid "M2"
+msgstr "M2"
+
+msgid "N1"
+msgstr "N1"
+
+msgid "N2"
+msgstr "N2"
+
+msgid "L3e"
+msgstr "L3e"
+
+msgid "L4e"
+msgstr "L4e"
+
+msgid "L5e"
+msgstr "L5e"
+
+msgid "L6e"
+msgstr "L6e"
+
+msgid "Fixed period"
+msgstr "Määräaikainen"
+
+msgid "Open ended"
+msgstr "Jatkuvavelotteinen"
+
+msgid "Bensin"
+msgstr "Bensiini"
+
+msgid "Diesel"
+msgstr "Diesel"
+
+msgid "Bifuel"
+msgstr "Kaasu"
+
+msgid "Time created"
+msgstr "Luonti-aikaleima"
+
+msgid "Time modified"
+msgstr "Muokattu-aikaleima"
+
 msgid "First name"
 msgstr "Etunimi"
 
 msgid "Last name"
 msgstr "Sukunimi"
+
+msgid "National identification number"
+msgstr "Henkilötunnus"
 
 msgid "Primary address"
 msgstr "Pysyvä osoite"
@@ -54,6 +102,9 @@ msgstr "Alue (2D)"
 msgid "Parking zones"
 msgstr "Pysäköintivyöhykkeet"
 
+msgid "Type"
+msgstr "Tyyppi"
+
 msgid "Vehicle type"
 msgstr "Ajoneuvon tyyppi"
 
@@ -65,6 +116,12 @@ msgstr "Päästöraja (NEDC)"
 
 msgid "Emission limit (WLTP)"
 msgstr "Päästöraja (WLTP)"
+
+msgid "Start date"
+msgstr "Alkupäivä"
+
+msgid "End date"
+msgstr "Loppupäivä"
 
 msgid "Low-emission criteria"
 msgstr "Päästökriteeri"
@@ -93,6 +150,9 @@ msgstr "Osoitteet"
 msgid "Company name"
 msgstr "Yrityksen nimi"
 
+msgid "Business Id"
+msgstr "Y-tunnus"
+
 msgid "Company owner"
 msgstr "Yrityksen omistaja"
 
@@ -101,30 +161,6 @@ msgstr "Yritys"
 
 msgid "Companies"
 msgstr "Yritykset"
-
-msgid "M1"
-msgstr "M1"
-
-msgid "M2"
-msgstr "M2"
-
-msgid "N1"
-msgstr "N1"
-
-msgid "N2"
-msgstr "N2"
-
-msgid "L3e"
-msgstr "L3e"
-
-msgid "L4e"
-msgstr "L4e"
-
-msgid "L5e"
-msgstr "L5e"
-
-msgid "L6e"
-msgstr "L6e"
 
 msgid "Vehicle category"
 msgstr "Ajoneuvon kategoria"
@@ -183,12 +219,6 @@ msgstr "Ajokortti"
 msgid "Driving licences"
 msgstr "Ajokortit"
 
-msgid "Fixed period"
-msgstr "Määräaikainen"
-
-msgid "Open ended"
-msgstr "Toistaiseksi voimassaoleva"
-
 msgid "Contract type"
 msgstr "Sopimustyyppi"
 
@@ -210,11 +240,11 @@ msgstr "Tuote"
 msgid "Products"
 msgstr "Tuotteet"
 
-msgid "Start"
-msgstr "Alku"
+msgid "Start time"
+msgstr "Alkuaika"
 
-msgid "End"
-msgstr "Loppu"
+msgid "End time"
+msgstr "Loppuaika"
 
 msgid "Parking permit"
 msgstr "Pysäköintitunnus"
